--- a/app/views/room_papa/main.html.erb
+++ b/app/views/room_papa/main.html.erb
@@ -1,160 +1,160 @@
-<style rel="stylesheet">
-.daterangepicker{
-  border-radius: 0px!important;
-}
-.StickNavbarOnTop
-{
-   position: fixed !important;
-   top:0  ;
-   z-index: 1!important;
-   width: 102.2%!important;
- }
+ <style rel="stylesheet">
+    .daterangepicker{
+      border-radius: 0px!important;
+    }
+    .StickNavbarOnTop
+    {
+       position: fixed !important;
+       top:0  ;
+       z-index: 1!important;
+       width: 102.2%!important;
+     }
 
-.HotelBlock:hover{
-  border-radius: 0px;
-  transition-duration: 0.3s;
-  box-shadow: 0px 5px 10px 2px;
-  transform: scale(1.015);
-}
-.LocationBlock:hover {
-  border-radius: 0px;
-  transition-duration: 0.3s;
-  box-shadow: 0px 5px 10px 2px;
-  transform: scale(1.015);
-}
-.LocationBlock>h3{
-  text-shadow: 1px 1px black;
-  color:white;
-  padding-left:20px;
-  padding-top:10px;
-  margin-bottom: 0px;
-}
-.HotelBlock>h3{
-  text-shadow: 1px 1px black;
-  color:white;
-  padding-left:20px;
-  padding-top:10px;
-  margin-bottom: 0px;
-}
-.LocationBlock>h5{
-  padding-top: 0px;
-  margin-top: 0px;
-  color: white;
-  text-shadow: 1px 1px black;
-  margin-left:20px;
-}
-.HotelBlock>h5{
-  padding-top: 0px;
-  margin-top: 0px;
-  color: white;
-  text-shadow: 1px 1px black;
-  margin-left:20px;
-}
+    .HotelBlock:hover{
+      border-radius: 0px;
+      transition-duration: 0.3s;
+      box-shadow: 0px 5px 10px 2px;
+      transform: scale(1.015);
+    }
+    .LocationBlock:hover {
+      border-radius: 0px;
+      transition-duration: 0.3s;
+      box-shadow: 0px 5px 10px 2px;
+      transform: scale(1.015);
+    }
+    .LocationBlock>h3{
+      text-shadow: 1px 1px black;
+      color:white;
+      padding-left:20px;
+      padding-top:10px;
+      margin-bottom: 0px;
+    }
+    .HotelBlock>h3{
+      text-shadow: 1px 1px black;
+      color:white;
+      padding-left:20px;
+      padding-top:10px;
+      margin-bottom: 0px;
+    }
+    .LocationBlock>h5{
+      padding-top: 0px;
+      margin-top: 0px;
+      color: white;
+      text-shadow: 1px 1px black;
+      margin-left:20px;
+    }
+    .HotelBlock>h5{
+      padding-top: 0px;
+      margin-top: 0px;
+      color: white;
+      text-shadow: 1px 1px black;
+      margin-left:20px;
+    }
 
-.LocationBlock>.pricetag{
-  position: absolute;
-  height:40px;
-  bottom:-10px;
-  right: 0px;
-  padding-right:20px;
-  color: white;
-  text-shadow: 1px 1px black;
-}
-.HotelBlock>.pricetag{
-  position: absolute;
-  height:40px;
-  bottom:-10px;
-  left: 35px;
-  padding-right:20px;
-  color: white;
-  text-shadow: 1px 1px black;
-}
+    .LocationBlock>.pricetag{
+      position: absolute;
+      height:40px;
+      bottom:-10px;
+      right: 0px;
+      padding-right:20px;
+      color: white;
+      text-shadow: 1px 1px black;
+    }
+    .HotelBlock>.pricetag{
+      position: absolute;
+      height:40px;
+      bottom:-10px;
+      left: 35px;
+      padding-right:20px;
+      color: white;
+      text-shadow: 1px 1px black;
+    }
 
-.EdgesSharp {
-  border-radius: 0px !important;
-}
+    .EdgesSharp {
+      border-radius: 0px !important;
+    }
 
-.NavbarStyle {
-    padding: 10px;
-  }
+    .NavbarStyle {
+        padding: 10px;
+      }
 
-.FontSize {
-    font-size: 10px;
-  }
-
-
-.NavbarTwoTop{
-  padding-top: 0px;
-  background-color: orange;
-
-}
-.FontForInput{
-  font-size:14px !important
-}
-.NavbarTwo{
-padding-top: 0px;
-border-style: none!important;
-background-color: orange!important;
-}
+    .FontSize {
+        font-size: 10px;
+      }
 
 
-@media only screen and (min-width:1px){
-  .AfterPadding{
-   padding-top: 65px;
-  }
-}
+    .NavbarTwoTop{
+      padding-top: 0px;
+      background-color: orange;
 
-@media only screen and (min-width:768px){
-  .drpdwn{
-  position:absolute;
-  z-index:1;
-  width : 91.5%;
-  padding-left: 0px;
-  }
-  .AfterPadding{
-   padding-top: 130px;
-  }
-}
+    }
+    .FontForInput{
+      font-size:14px !important
+    }
+    .NavbarTwo{
+    padding-top: 0px;
+    border-style: none!important;
+    background-color: orange!important;
+    }
 
-@media only screen and (min-width:785px){
-  .drpdwn{
-  position:absolute;
-  z-index:1;
-  width : 87%;
-  padding-left: 15px;
-  }
-}
 
-@media only screen and (min-width:817px){
-  .drpdwn{
-  position:absolute;
-  z-index:1;
-  width : 91.8%;
-  padding-left: 0px;
+    @media only screen and (min-width:1px){
+      .AfterPadding{
+       padding-top: 65px;
+      }
+    }
 
-  }
-}
+    @media only screen and (min-width:768px){
+      .drpdwn{
+      position:absolute;
+      z-index:1;
+      width : 91.5%;
+      padding-left: 0px;
+      }
+      .AfterPadding{
+       padding-top: 130px;
+      }
+    }
 
-@media only screen and (min-width:992px){
-  .drpdwnhe{
-   width : 93.6%;
-  position:absolute;
-  z-index:1;
-  padding-left: 0px;
-  }
-}
+    @media only screen and (min-width:785px){
+      .drpdwn{
+      position:absolute;
+      z-index:1;
+      width : 87%;
+      padding-left: 15px;
+      }
+    }
 
-@media only screen and (min-width:1200px){
-  .drpdwnhe{
-   width : 89.5%;
-  position:absolute;
-  z-index:1;
-  padding-left: 0px;
-  }
-  .AfterPadding{
-   padding-top: 65px;
-  }
-}
+    @media only screen and (min-width:817px){
+      .drpdwn{
+      position:absolute;
+      z-index:1;
+      width : 91.8%;
+      padding-left: 0px;
+
+      }
+    }
+
+    @media only screen and (min-width:992px){
+      .drpdwnhe{
+       width : 93.6%;
+      position:absolute;
+      z-index:1;
+      padding-left: 0px;
+      }
+    }
+
+    @media only screen and (min-width:1200px){
+      .drpdwnhe{
+       width : 89.5%;
+      position:absolute;
+      z-index:1;
+      padding-left: 0px;
+      }
+      .AfterPadding{
+       padding-top: 65px;
+      }
+    }
 </style>
 
 <!-- top navbar -->
@@ -330,38 +330,6 @@ background-color: orange!important;
 </div>
 
 
-
-
-
-<!-- <div class="footer">
-  <div class="container">
-       <div class="col-md-6 col_2">
-     <ul><li><h5>Location:</h5><p>Taste Of India<span> 1.5 km far from Mall Road,</span></p><p>Near Indian Oil Pump, Vashishth Chowk <span>Manali</span></p></li>
-      <li><h5>Phone &amp; Mail</h5><p>Mobile&#128241;<span>+91 - 9736644322</span></p><p>Email:<br><span><a href="tasteofindiamanali@gmail.com">tasteofindiamanali@gmail.com</a></span></p></li>
-     </ul>
-     </ul>
-    </div>
-    <div class="col-md-6 col_3">
-     <div class="col_3">
-     <ul class="menu">
-               <li><a href="index.html">Home</a></li>|
-               <li><a href="index.html">Menu</a></li>|
-               <li><a href="about.html">About</a></li> |
-               <li><a href="services.html">Services</a></li> |
-
-               <li><a href="contact.html">Contact</a></li>
-     </ul>
-     <p>
-      </div>
-    </div>
-  <div class="clearfix"> </div>
-  </div>
-</div> -->
-
-<!-- </p></font><hr><center><h5><u>Copyright© 2018 Taste Of India Manali (Unit of High Adventure). All Rights Reserved.</u></h5> -->
-
-
-
 <script type="text/javascript">
 
   var today = new Date();
@@ -456,7 +424,7 @@ $(function() {
         },
       locale: {
           cancelLabel: 'Clear'
-                    }
+      }
   });
 
   $('input[name="datefilter"]').on('apply.daterangepicker', function(ev, picker) {
@@ -664,27 +632,47 @@ $(function() {
       e.preventDefault();
       var city = document.getElementById('Destination').value;
 
-        $.ajax({
-                url : "/room_papa/hotels",
-                type : "get",
-                data : { data_value: AdultChild,
-                         city: city,
-                         checkin: checkindatetoserver,
-                         checkout: checkoutdatetoserver
-                        },
-                progress:function(loadTime,status){
-                          console.log(loadTime);
-                         },
-                success: function (result,status,object) {
-                          console.log(result);
-                          console.log(status);
-                          window.location.href = result["url_link"];
-                         },
-                error:function(result,status) {
-                          alert(result.responseText);
-                          console.log(status);
-                         }
-        });
+        if (AdultChild.length > 0){
+            if(city.length > 0){
+              if(checkindatetoserver.length>0 || checkoutdatetoserver.length>0){
+                 $.ajax({
+                  url : "/room_papa/hotels",
+                  type : "get",
+                  data : { data_value: AdultChild,
+                           city: city,
+                           checkin: checkindatetoserver,
+                           checkout: checkoutdatetoserver
+                          },
+                  progress:function(loadTime,status){
+                            console.log(loadTime);
+                           },
+                  success: function (result,status,object) {
+                            console.log(result);
+                            console.log(status);
+                            window.location.href = result["url_link"];
+                           },
+                  error:function(result,status) {
+                            alert(result.responseText);
+                            console.log(status);
+                           }
+                });
+               }else{
+                  noty({text: 'You have not selected the date', type: 'error', timeout: 4000, theme: 'defaultTheme',maxVisible: 5,template: '<div class="noty_message"><span class="noty_text"></span><div class="noty_close"></div></div>',
+                  progressBar: true});
+                  setTimeout(function(){
+                    location.reload();
+                  },1000)
+               }
+            }else{
+
+              noty({text: 'You have not entered the destination', type: 'error', timeout: 4000, theme: 'defaultTheme',maxVisible: 5,template: '<div class="noty_message"><span class="noty_text"></span><div class="noty_close"></div></div>',
+                  progressBar: true});
+            }
+        }else{
+          noty({text: 'You have not added any room yet', type: 'error', timeout: 4000, theme: 'defaultTheme',maxVisible: 5,template: '<div class="noty_message"><span class="noty_text"></span><div class="noty_close"></div></div>',
+                  progressBar: true});
+
+        }
   
     });
 
