--- a/app/views/pricings/show.html.erb
+++ b/app/views/pricings/show.html.erb
@@ -1,34 +1,545 @@
-<p id="notice"><%= notice %></p>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Page 4</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row ">
+        <h2>Pricing</h2>
+      </div>
+      <div class="row">
+        <div class="col-sm-2">
+          <div><kbd>Today : <span id="todayDate"></span></kbd></div>
+        </div>
+        <div class="col-sm-10">
+          <button class="btn btn-warning col-sm-3" onclick="PreviousTenDays()"><span class="glyphicon glyphicon-chevron-left"></span>Previous 10 days</button>
+          <button class="btn btn-info col-sm-3 pull-right" onclick="NextTenDays()">Next 10 days<span class="glyphicon glyphicon-chevron-right"></span></button>
+        </div>
+      </div>
 
-<p>
-  <strong>Baseprice:</strong>
-  <%= @pricing.baseprice %>
-</p>
+      <!-- use code -->
+      <!-- table -->
+      <div class="">
+        <div class="table-responsive TableForDates">
+          <table class="table table-bordered">
+            <thead>
+              <tr id="TopRow">
+              </tr>
+            </thead>
+            <tbody id="TableData">
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+    <div class="container" style="display:none">
+      <table class="table table-bordered">
+        <thead>
+          <tr>
+            <td>Sun</td>
+            <td>Mon</td>
+            <td>Tue</td>
+            <td>Wed</td>
+            <td>Thurs</td>
+            <td>Fri</td>
+            <td>Sat</td>
+          </tr>
+        </thead>
+        <tbody id="MonthTable">
+          <tr>
+            <td class="BlockedRoom">
+              <div>
+                1
+              </div>
+              <div class="text-center RoomEmptyNumber">
+              NA
+              </div>
+            </td>
+            <td>
+              <div>
+                2
+              </div>
+            </td>
+            <td>
+              <div>
+                3
+              </div>
+            </td>
+            <td>
+              <div>
+                4
+              </div>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </body>
+</html>
 
-<p>
-  <strong>Lunch:</strong>
-  <%= @pricing.lunch %>
-</p>
 
-<p>
-  <strong>Dinner:</strong>
-  <%= @pricing.dinner %>
-</p>
 
-<p>
-  <strong>Breakfast:</strong>
-  <%= @pricing.breakfast %>
-</p>
 
-<p>
-  <strong>Scheme:</strong>
-  <%= @pricing.scheme %>
-</p>
 
-<p>
-  <strong>Roomtype:</strong>
-  <%= @pricing.roomtype %>
-</p>
+<script>
 
-<%= link_to 'Edit', edit_pricing_path(@pricing) %> |
-<%= link_to 'Back', pricings_path %>
+
+var TableData='';
+
+var obj1 = <%= @pricing.to_json.html_safe%>
+// var RoomName = <%= @room_names.to_json.html_safe%>
+console.log(obj1)
+obj = <%= Bookinglog.where(hotel_id: current_user.hotel.id).first.booking.to_json.html_safe %>;
+var endincrement=10;
+var diff=0;
+var arr = Object.keys(obj);
+var TodayDate = new Date();
+document.getElementById('todayDate').innerHTML= TodayDate.getDate()+' '+CalMonthStr(TodayDate.getMonth()) +' '+TodayDate.getFullYear();
+var DateToShow = TodayDate.getTime();
+var RoomTypeData=[];
+
+function CalMonthStr(x)
+{
+  if(x==1)
+  {
+    return "Jan";
+  }
+  else if(x==2)
+  {
+    return "Feb";
+  }
+  else if(x==3)
+  {
+    return "Mar";
+  }
+  else if(x==4)
+  {
+    return "Apr";
+  }
+  else if(x==5)
+  {
+    return "May";
+  }
+  else if(x==6)
+  {
+    return "Jun";
+  }
+  else if(x==7)
+  {
+    return "Jul";
+  }
+  else if(x==8)
+  {
+    return "Aug";
+  }
+  else if(x==9)
+  {
+    return "Sep";
+  }
+  else if(x==10)
+  {
+    return "Oct";
+  }
+  else if(x==11)
+  {
+    return "Nov";
+  }
+  else
+  {
+    return "Dec";
+  }
+}
+
+
+function NextTenDays(){
+  endincrement=10;
+  DateToShow=DateToShow+(10*24*60*60*1000);
+  AllData(DateToShow);
+}
+
+function PreviousTenDays(){
+  endincrement=10;
+  DateToShow=DateToShow-(10*24*60*60*1000);
+  AllData(DateToShow);
+}
+
+function AddTopRow(date){
+  var x=date;
+  x=date.getTime();
+  var TopRow='';
+  TopRow=TopRow+
+          '<th>'+
+          'RoomType'+
+          '</th>'
+  for (var i = x; i < (x+(10*24*60*60*1000)); i=i+(24*60*60*1000)) {
+    var day=new Date(i);
+    date=day.getDate();
+    month=day.getMonth()+1;
+    month=CalMonthStr(month);
+    TopRow=TopRow+
+    '<th>'+
+      '<div class="text-center DateNumber">'+
+      date+
+      '</div>'+
+      '<div class="text-center">'+
+      month+
+      '</div>'+
+    '</th>'
+  }
+  document.getElementById('TopRow').innerHTML=TopRow;
+}
+
+
+function checkdateequal(date1,date2){
+
+  if(date1.getFullYear()==date2.getFullYear()){
+    if(date1.getMonth()==date2.getMonth()){
+      if(date1.getDate()==date2.getDate()){
+        return 'equal';
+      }
+      else if(date1.getDate()<date2.getDate()){
+        return 'lesser';
+      }
+      else{
+        return 'greater';
+      }
+    }
+    else if(date1.getMonth()<date2.getMonth()){
+      return 'lesser';
+    }
+    else{
+      return 'greater';
+    }
+  }
+  else if(date1.getFullYear()<date2.getFullYear()){
+    return 'lesser';
+  }
+  else{
+    return 'greater'
+  }
+}
+
+// function to calculate
+var RoomName=0;
+
+function search(from, obj, roomtype,ivalue,toggleroom){
+  diff=0;
+  // console.log(RoomTypeData.length);
+  TableData=TableData+'<tr '
+              if(ivalue==0){
+                TableData=TableData+'class="btn-success Heading"'
+                TableData =TableData+'onclick="ToggleDown('+toggleroom+','+roomtype+')"'
+              }
+              else{
+                TableData=TableData+'class="Options"'
+              }
+              TableData=TableData+'>'+
+                                  '<td>'
+
+            if (ivalue==0) {
+              TableData = TableData + roomtype;
+            }
+            else if(ivalue==1)
+            {
+              TableData = TableData + '2 Occupancy';
+            }
+            else if(ivalue==2)
+            {
+              TableData = TableData + '1 Occupancy';
+            }
+            else if(ivalue==3)
+            {
+              TableData = TableData + 'Extra Adult';
+            }
+            else if(ivalue==4)
+            {
+              TableData = TableData + 'Extra Child';
+            }
+            else if(ivalue==5)
+            {
+              TableData = TableData + 'Adult Breakfast';
+            }
+            else if(ivalue==6)
+            {
+              TableData = TableData + 'Child Breakfast';
+            }
+            else if(ivalue==7)
+            {
+              TableData = TableData + 'Adult Lunch';
+            }
+            else if(ivalue==8)
+            {
+              TableData = TableData + 'Child Lunch';
+            }
+            else if(ivalue==9)
+            {
+              TableData = TableData + 'Adult Dinner';
+            }
+            else
+            {
+              TableData = TableData + 'Child Dinner';
+            }
+
+
+            TableDate=TableData+'</td>'
+
+  found=false;
+  var j;
+  var incremented = false;
+
+  from = new Date(Date.parse(from))
+
+  for(var i=0;i<arr.length;i++)
+  {
+    parsed = parseInt(arr[i]);
+
+    if(parsed==roomtype){
+
+      console.log(Date.parse(obj[parsed][0].start));
+      s=new Date(Date.parse(obj[parsed][0].start))
+
+      if(checkdateequal(from,s)=='lesser'){
+
+        console.log('a')
+
+        diff = Math.abs(from - s);
+          diff = Math.ceil(diff / (1000 * 3600 * 24))-1;
+
+        if(diff<=10){
+          console.log('b')
+          enddate=new Date(Date.parse(from));
+          enddate.setDate(enddate.getDate() + diff);
+        }
+        else{
+          console.log('c')
+          enddate=new Date(Date.parse(from));
+          enddate.setDate(enddate.getDate() + 10);
+
+        }
+
+        for (var d = from; d <enddate;) {
+                  TableData=TableData+
+                            '<td>'+
+                             'NA'+
+                              '</td>'
+                  console.log(d + " NA");
+                  // TableData=TableData+'<td class="BlockedRoom">'+
+                  //   '<div class="text-center RoomEmptyNumber">'+
+                  //   'NA'+
+                  //   '</div>'+
+                  //   '</td>'
+
+
+              f=1;
+              d.setDate(d.getDate() + f)
+
+          }
+
+        from=s;
+
+      }
+      if(checkdateequal(from,s)=='equal' || checkdateequal(from,s)=='greater'){
+
+        for(j=0;j<obj[parsed].length;j++)
+        {
+          start=new Date(Date.parse(obj[parsed][j].start));
+          end=new Date(Date.parse(obj[parsed][j].end))
+
+          if((checkdateequal(from,start)=='equal' || checkdateequal(from,start)=='greater') && (checkdateequal(from,end)=='lesser' || checkdateequal(from,end)=='equal')){
+
+            found=true;
+            break;
+          }
+        }
+      }
+
+      if(found==true){
+
+        to=new Date(Date.parse(from));
+        to.setDate(to.getDate() + endincrement-diff-1);
+
+        f=0;
+
+        for (var d = from; d <=to;) {
+
+            start1=new Date(Date.parse(obj[parsed][j].start));
+            end1 = new Date(Date.parse(obj[parsed][j].end))
+
+            if((checkdateequal(d,start1)=='equal' || checkdateequal(d,start1)=='greater') && (checkdateequal(d,end1)=='lesser' || checkdateequal(d,end1)=='equal')){
+              // console.log(obj[parsed][j].price)
+              // console.log(ivalue+" -------------------------------");
+              TableData =TableData+
+                          '<td>'
+
+              if(ivalue==0)
+              {
+                TableData = TableData + obj[parsed][j].price.base_2;
+              }
+              else if(ivalue==1)
+              {
+                TableData = TableData + obj[parsed][j].price.base_2;
+              }
+              else if(ivalue==2)
+              {
+                TableData = TableData + obj[parsed][j].price.base_1;
+              }
+              else if(ivalue==3)
+              {
+                TableData = TableData + obj[parsed][j].price.extraadult;
+              }
+              else if(ivalue==4)
+              {
+                TableData = TableData + obj[parsed][j].price.extrachild;
+              }
+              else if(ivalue==5)
+              {
+                TableData = TableData + obj[parsed][j].price.adult_breakfast;
+              }
+              else if(ivalue==6)
+              {
+                TableData = TableData + obj[parsed][j].price.child_breakfast;
+              }
+              else if(ivalue==7)
+              {
+                TableData = TableData + obj[parsed][j].price.adult_lunch;
+              }
+              else if(ivalue==8)
+              {
+                TableData = TableData + obj[parsed][j].price.child_lunch;
+              }
+              else if(ivalue==9)
+              {
+                TableData = TableData + obj[parsed][j].price.adult_dinner;
+              }
+              else
+              {
+                TableData = TableData + obj[parsed][j].price.child_dinner;
+              }
+                          TableData=TableData+'</td>'
+            }
+            else{
+              j=j+1;
+              incremented=true;
+            }
+
+            if(incremented){
+            f=0;
+              incremented=false;
+              d.setDate(d.getDate() + f)
+          }
+            else{
+              f=1;
+              d.setDate(d.getDate() + f)
+          }
+        }
+
+      }
+      break;
+    }
+
+  }
+
+  TableData=TableData+'</tr>';
+  // console.log(TableData);
+  document.getElementById('TableData').innerHTML=TableData;
+}
+
+
+// search(new Date(2018,06,19),obj1,61)
+function AllData(DateToShow){
+  TableData=' ';
+  var x=new Date(DateToShow);
+  var year = x.getFullYear();
+  var month = x.getMonth();
+  var date = x.getDate();
+  AddTopRow(new Date(year, month, date));
+  for (var i = 0; i < arr.length; i++) {
+    // console.log(arr[i]);
+    // for (var j = 0; j <= 10; j++) {
+    search(new Date(year, month, date),obj1, arr[i],0,i);
+    // }
+  }
+}
+function ToggleDown(ArrNo,RoomName){
+  console.log(ArrNo);
+  TableData=' ';
+  var x=new Date(DateToShow);
+  var year = x.getFullYear();
+  var month = x.getMonth();
+  var date = x.getDate();
+  var i=0;
+  // AddTopRow(new Date(year, month, 21));
+  AddTopRow(new Date(year, month, date));
+  for (i = 0; i<=ArrNo; i++) {
+    search(new Date(year, month, date),obj1, arr[i],0,i);
+  }
+  for (var k = 1; k <= 10; k++) {
+  search(new Date(year, month, date),obj1,arr[ArrNo],k,ArrNo);
+  }
+  for (var l = i; l < arr.length; l++) {
+    search(new Date(year, month, date),obj1, arr[l],0,l);
+  }
+}
+
+function PreviousTenDays(){
+  DateToShow=DateToShow - (10*24*60*60*1000);
+  AllData(DateToShow);
+}
+
+function NextTenDays(){
+  DateToShow=DateToShow + (10*24*60*60*1000);
+  AllData(DateToShow);
+}
+AllData(DateToShow);
+
+
+
+$(document).ready(function(){
+    // AllData(DateToShow);
+});
+
+
+
+
+// var MonthTable=' ';
+// var MonthDate= new Date();
+// function ShowMonth(){
+//   endincrement=30;
+//   MonthTable =' ';
+//   MonthTable = '<tr>'
+//   var datenumber =1;
+//   for (var i = 0; i <MonthDate.getDay(); i++) {
+//     MonthTable=MonthTable+ '<td class="BlockedRoom">'+
+//       '<div>'+
+//       '</div>'+
+//       '<div class="">'+
+//       '</div>'+
+//     '</td>'
+//   }
+//   search(new Date(year, month, date),obj, arr[i]);
+//   console.log(MonthTable);
+//   document.getElementById('MonthTable').innerHTML=MonthTable;
+// }
+
+</script>
+
+
+
+
+<style>
+.TableForDates{
+padding-top: 50px;
+}
+
+
+.Heading{
+  height:50px!important;
+  background: #636363;
+}
+.Options{
+  background: #bfbfbf;
+  color: black;
+}
+</style>
