--- a/app/views/roomtypes/index.html.erb
+++ b/app/views/roomtypes/index.html.erb
@@ -1,119 +1,150 @@
-<p id="notice"><%= notice %></p>
+<%if current_user.hotel%>
+  <div class="col-sm-12">
+    <h1>All Roomtypes</h1>
+    <%if current_user.hotel && current_user.hotel.pricing%>
+      <%= link_to 'Show Pricings', url_for(controller: 'pricings',action: 'show'),:class=> "btn btn-warning EdgesSharp"%>
+     <%end%>
+  </div>
 
-<div class="col-sm-12">
-  <h1>All Roomtypes</h1>
-</div>
-<%@roomtypes = current_user.hotel.roomtypes%>
-<% @roomtypes.each do |roomtype| %>
-<div class="col-xs-12 col-sm-3 col-md-4 col-lg-3">
-  <div class="Block">
-    <div class="container" style="width:100%;height:auto">
-      <% if roomtype.images.any?%>
+  <%@roomtypes = current_user.hotel.roomtypes%>
+  <% @roomtypes.each do |roomtype| %>
+    <div class="col-xs-12 col-sm-3 col-md-4 col-lg-3">
+      <div class="Block">
+        <div class="container" style="width:100%;height:auto">
+          <% if roomtype.images.any?%>
 
-        <%=image_tag(roomtype.images.first.url,class: 'Image')%>
-      <%else%>
-        <%=image_tag('/assets/NoImageForRoom.jpg',class: 'Image')%>
-      <%end%>
-    </div>
-
-    <div class="DataArea">
-      <div class="container">
-        <h3 class="" style="text-decoration:underline;color:black"><b><%=roomtype.typename %></b></h3>
-        <p class="TextBlack"><b>Rooms: </b><%= roomtype.rooms %></p>
-        <p class="TextBlack"><b>Bed Type: </b><%= roomtype.beds %></p>
-        <p class="TextBlack"><b>Adults: </b><%= roomtype.baseadults %></p>
-        <p class="TextBlack"><b>Children: </b><%= roomtype.basechildren %></p>
-      </div>
-      <div class="container" style="width:100%;height:auto">
-          <%= link_to 'Show', roomtype, :class=>'btn btn-success EdgesSharp' %>
-          <%= link_to 'Edit', edit_roomtype_path(roomtype), :class=>'btn btn-warning EdgesSharp' %>
-          <%if current_user&&current_user.hotel.pricing == nil%>
-          <%= link_to 'add price scheme', url_for(controller: 'pricings',action: 'new',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
+            <%=image_tag(roomtype.images.first.url,class: 'Image')%>
           <%else%>
-            <% if current_user.hotel.pricing.price[roomtype.id]%>
-                <%= link_to 'edit price scheme',url_for(controller: 'pricings',action: 'edit',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
-            <%else%>
-                <%= link_to 'add price scheme', url_for(controller: 'pricings',action: 'new',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
-            <%end%>
+            <%=image_tag('/assets/NoImageForRoom.jpg',class: 'Image')%>
           <%end%>
+        </div>
+
+        <div class="DataArea">
+          <div class="container">
+            <h3 class="" style="text-decoration:underline;color:black"><b><%=roomtype.typename %></b></h3>
+            <p class="TextBlack"><b>Rooms: </b><%= roomtype.rooms %></p>
+            <p class="TextBlack"><b>Bed Type: </b><%= roomtype.beds %></p>
+            <p class="TextBlack"><b>Adults: </b><%= roomtype.baseadults %></p>
+            <p class="TextBlack"><b>Children: </b><%= roomtype.basechildren %></p>
+          </div>
+          <div class="container" style="width:100%;height:auto">
+              <%= link_to 'Show', roomtype, :class=>'btn btn-success EdgesSharp' %>
+              <%= link_to 'Edit', edit_roomtype_path(roomtype), :class=>'btn btn-warning EdgesSharp' %>
+              <%if current_user&&current_user.hotel.pricing == nil%>
+              <%= link_to 'add price scheme', url_for(controller: 'pricings',action: 'new',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
+              <%else%>
+                <% if current_user.hotel.pricing.price[roomtype.id]%>
+                    <%= link_to 'edit price scheme',url_for(controller: 'pricings',action: 'edit',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
+                <%else%>
+                    <%= link_to 'add price scheme', url_for(controller: 'pricings',action: 'new',room_id: roomtype.id),:class=> "btn btn-info EdgesSharp"%>
+                <%end%>
+              <%end%>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+  <div class="col-xs-12 col-sm-3 col-md-4 col-lg-3">
+    <div class="AddRoomBlock" id='AddRoomBlock' style="background:#739cdd">
+      <div class="container" style="width:100%;height:auto;">
+        <div class="TextAddRoomtype" >
+          New Roomtype
+        </div>
       </div>
     </div>
   </div>
-</div>
-<% end %>
-<div class="col-xs-12 col-sm-3 col-md-4 col-lg-3">
-  <div class="AddRoomBlock" id='AddRoomBlock' style="background:#739cdd">
-    <div class="container" style="width:100%;height:auto;">
-      <div class="TextAddRoomtype" >
-        New Roomtype
-      </div>
-    </div>
+  <br>
+
+  <div class="" style="display:none">
+    <%= link_to 'New Roomtype', new_roomtype_path,:id=>'NewRoom' %>
+
   </div>
-</div>
-<br>
-
-<div class="" style="display:none">
-  <%= link_to 'New Roomtype', new_roomtype_path,:id=>'NewRoom' %>
-
-</div>
 
 
-<style media="screen">
-  .EdgesSharp{
-    border-radius: 0px;
-    color: white;
-  }
-  .DataArea{
-    position: absolute;
-    bottom:60px;
-    margin-right: 10px;
-  }
-  .TextBlack{
-    color: black;
-    font-family: sans-serif;
-    font-size: 15px;
-  }
-  .TextAddRoomtype{
-    font-size: 30px;
-    font-weight: bold;
-    padding-top: 27%;
-    padding-left: 10%;
-  }
-  .AddRoomBlock{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    width:100%;
-    height: 200px;
-    background: white;
-    margin-bottom: 50px;
-    border: none;
-  }
-  .AddRoomBlock:hover {
-    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
-    border-radius: 5px;
-  }
-  .Block{
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    width:100%;
-    min-height: 470px;
-    background: white;
-    margin-bottom: 50px;
-    border: none;
-  }
-  .Block:hover {
-    box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
-    border-radius: 5px;
-  }
-  .Image{
-    margin-top: 13px;
-    width: 100%;
-    height:auto;
-    max-height: 250px;
-  }
-</style>
+  <style media="screen">
+    .EdgesSharp{
+      border-radius: 0px;
+      color: white;
+    }
+    .DataArea{
+      position: absolute;
+      bottom:60px;
+      margin-right: 10px;
+    }
+    .TextBlack{
+      color: black;
+      font-family: sans-serif;
+      font-size: 15px;
+    }
+    .TextAddRoomtype{
+      font-size: 30px;
+      font-weight: bold;
+      padding-top: 27%;
+      padding-left: 10%;
+    }
+    .AddRoomBlock{
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      width:100%;
+      height: 200px;
+      background: white;
+      margin-bottom: 50px;
+      border: none;
+    }
+    .AddRoomBlock:hover {
+      box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
+      border-radius: 5px;
+    }
+    .Block{
+      box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+      width:100%;
+      min-height: 470px;
+      background: white;
+      margin-bottom: 50px;
+      border: none;
+    }
+    .Block:hover {
+      box-shadow: 0 10px 16px 0 rgba(0,0,0,0.2);
+      border-radius: 5px;
+    }
+    .Image{
+      margin-top: 13px;
+      width: 100%;
+      height:auto;
+      max-height: 250px;
+    }
+  </style>
 
 
-<script type="text/javascript">
-  $('#AddRoomBlock').click(function(){
-    document.getElementById('NewRoom').click();
-  });
-</script>
+  <script type="text/javascript">
+    $('#AddRoomBlock').click(function(){
+      document.getElementById('NewRoom').click();
+    });
+  </script>
+<%else%>
+       <div class="container">
+
+        <div class="modalfade" id="myModal" role="dialog">
+          <div class="modal-dialog">
+      
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">This user has not registered any property.</h4>
+              </div>
+              <div class="modal-body">
+                <p>Kindly register your property 
+                   fill the <%=link_to "Profile Details",new_hotel_path(id: current_user.id),method: :get%></p>
+              </div>
+
+            </div>
+           
+          </div>
+        </div>
+       
+      </div>
+      <style type="text/css">
+        .close{
+          display: none;
+        }
+      </style>
+<%end%>
